# stock-research-foundation

./: .env.example  .gitignore  README.md  check_progress.py  claude_code_task.md  lessons_learned.md  progress_log.md  pyproject.toml  run_check.sh  task_tracker.md
.windsurf/workflows/: github-sync.md
agents/: governance.md  pm_agent_task.md  pm_report.md  req_agent_task.md  req_report.md  requirements_matrix.md
audits/: project_matrix.csv  reuse_decisions.md  source_endpoint_catalog.md
mcp/: local_stock_server.py
scripts/: init_db.py
skills/announcement-event-research/: SKILL.md
skills/company-fundamental-research/: SKILL.md
skills/industry-supply-chain-research/: SKILL.md
skills/investment-thesis-falsification/: SKILL.md
skills/stock-data-acquisition/: SKILL.md
skills/stock-data-validation/: SKILL.md
skills/valuation-and-earnings-sensitivity/: SKILL.md
src/: acceptance.py  cli.py  config.py  exceptions.py  logging_config.py
src/adapters/: __init__.py  akshare_adapter.py  baostock_adapter.py  cninfo_adapter.py  tushare_adapter.py
src/jobs/: __init__.py  sync_announcements.py  sync_financials.py  sync_market_daily.py  sync_security_master.py
src/lake/: __init__.py  bronze.py  duckdb_views.sql  silver.py
src/models/: __init__.py  dq_rules.py  schema.py
tests/: test_adjustment.py  test_announcement_completeness.py  test_announcements.py  test_cli.py  test_e2e_research_flow.py  test_financial_single_quarter.py  test_freshness.py  test_market_daily.py  test_mcp_return_size.py  test_null_handling.py  test_source_consistency.py  test_symbols.py
(+5 files in other folders)
