[project]
name = "stock-research-foundation"
version = "0.1.0"
description = "Local-first personal stock research data foundation with DuckDB + Parquet + MCP"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "tushare>=1.4.0",
    "akshare>=1.14.0",
    "baostock>=0.8.8",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[project.scripts]
stock-cli = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
